* numpy 1.14 related fixes (mostly in file parsers)
* fix bugs in spacegroups whos Wyckoff position contains a multiplication
* make U/UB matrix compatible with the definition in SPEC
* remove deprecated Lattice/LatticeBase code
* update XRR example

v1.4.2, 2017-11-28 "The Praha edition"

* introduce convenience function HKL to convert q-vectors to HKL of materials
* update outdated information and fix typos in README
* introduce abstract classes where useful
* code cleanup (import statements)
* vastly improved CIF file support with recognition of correct space group and
  Wyckoff position
* use AppVeyor.com for Windows testing and binary creation
* make wavelength handling in PowderDiffraction more flexible
* fix bug in SiGe alloy class
* python2 fix for EDFFile which could have failed as described in issue #41
* fix clear_bit utility function
* fix float/int conversion in line cut functions for newer numpy

v1.4.1, 2017-04-03

* new materials (Cr, tetragonal BaTiO3)
* fix bug in DarwinModel
* fix multiprocessing on MS Windows platforms
* fix BUG in tetragonal crystals (wrong symmetry was used!)

v1.4.0, 2017-02-09

* fix of negative HKL directions in RelaxationTriangle
* new SGLattice class which replaces Lattice and allows for easier material
  definitions
* old Lattice class is still included but now deprecated and will be removed
  in >1.5.0
* new PowderExperiment, PowderDiffraction and PowderModel classes for proper
  simulation of powder patterns. Thanks to Marcus Mendenhall for his
  contribution of a Fundamentals parameter approach powder profile
  calculation.
* cache database results -> huge speedups in repeated calls with same
  parameters
* new file parser for ILL numor files (station D23, maybe more general)
* add possibility to fix the pixel size when calibrating 2D detectors
* new normalized Lorentzian function (NormLorentz1d)
* add fully asymmetric Pseudovoigt (different width and eta)