@@ -1,3 +1,4 @@
+* try to parse oxidation state of elements from a CIF file
 * numpy 1.14 related fixes (mostly in file parsers)
 * fix bugs in spacegroups whos Wyckoff position contains a multiplication
 * make U/UB matrix compatible with the definition in SPEC
